...
    <string name="account_label">Account</string>
    <string name="create_account_label">Create account</string>
    <string name="already_have_account_label">Already hava an account?</string>
    <string name="home_label">Home</string>
    <string name="insights_label">Insights</string>
    <string name="financial_label">Financial</string>
    <string name="stock_label">Stock</string>
    <string name="sales_label">Sales</string>
    <string name="orders_label">Orders</string>
    <string name="products_label">Products</string>
    <string name="product_label">Product</string>
    <string name="catalog_label">Catalog</string>
    <string name="deliveries_label">Deliveries</string>
    <string name="drawer_menu_label">Drawer Menu</string>
    <string name="add_label">Add</string>
    <string name="done_label">Done</string>
    <string name="info_label">Info</string>
    <string name="expand_item_label">Expand item</string>
    <string name="up_button_label">Up button</string>
    <string name="profile_picture">Profile picture</string>
    <string name="product_image_label">Product image</string>
    <string name="category_image_label">Category image</string>
    <string name="categories_label">Categories</string>
    <string name="analytics_label">Analytics</string>
    <string name="analytics_image_label">Analytics image</string>
    <string name="stock_expired_item_label">Expired item.</string>
    <string name="empty_label">Empty</string>
    <string name="sale_payment_label">Today is the day to receive payments.</string>
    <string name="stock_expired_item_tag">%s is expired.</string>
    <string name="stock_payment_label">Day to pay your debit.</string>
    <string name="payment_tag">%s, value R$%s.</string>
    <string name="product_categories_label">Product Categories</string>
    <string name="stock_product_list">Products</string>
    <string name="new_product_label">New Product</string>
    <string name="edit_product_label">Edit Product</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="repeat_password_label">Repeat the password</string>
...
    <string name="enter_gender_label">Enter gender</string>
    <string name="enter_age_label">Enter age</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="category_label">Category</string>
    <string name="new_category_label">New category</string>
    <string name="more_options_label">More options</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="all_products_label">All the products</string>
    <string name="add_to_catalog_label">Add to catalog</string>
    <string name="save_categories_label">Save categories</string>
    <string name="amazon_label">Amazon</string>
    <string name="amazon_code_label">Amazon code</string>
...
    <string name="user_null_or_invalid_label">User is null or invalid!</string>
    <string name="username_already_exist_label">Username is already exist!</string>
    <string name="email_already_exist_label">Email is already exist!</string>
    <string name="incorrect_username_or_password_label">Incorrect username or password!</string>
    <string name="ok_code_label">OK</string>
    <string name="only_x_items_error_label">There\'s only %d items on stock.</string>
    <string name="search_label">Search</string>
    <string name="search_products_label">Search for products</string>
    <string name="search_customers_label">Search for costumers</string>
    <string name="item_image">Item image</string>
    <string name="new_item_label">New Item</string>
    <string name="new_sale_label">New Sale</string>
    <string name="edit_item_label">Edit Item</string>
    <string name="edit_sale_label">Edit Sale</string>
...
