...
            },
            placeholder = { Text(text = stringResource(id = R.string.search_products_label)) }
        ) {
            LazyColumn(
                modifier =
                    Modifier
                        .semantics { contentDescription = "List of search" }
                        .fillMaxWidth(),
                reverseLayout = true
            ) {
                items(items = searchCacheList, key = { searchCache -> searchCache.search }) { searchCache ->
                    SimpleItemList(
                        modifier = Modifier.padding(1.dp),
...
                }
            }
        }
        LazyColumn(
            modifier =
                Modifier
                    .semantics { contentDescription = "List of items" }
                    .padding(it),
            contentPadding = PaddingValues(vertical = 4.dp, horizontal = 8.dp)
        ) {
            items(items = stockProducts, key = { stock -> stock.id }) { stock ->
                HorizontalItemList(
                    modifier = Modifier.padding(vertical = 4.dp),
...
